--- a/src/app.html
+++ b/src/app.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/bitmoji.png" />
 		<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 		<meta name="viewport" content="width=device-width" />
+		<script src="https://kit.fontawesome.com/66ce4a498c.js" crossorigin="anonymous"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
