--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/bitmoji.png" />
+		<link href="/fontawesome/css/all.css" rel="stylesheet" />
 		<meta name="viewport" content="width=device-width" />
-		<script src="https://kit.fontawesome.com/66ce4a498c.js" crossorigin="anonymous"></script>
+		<!-- <script src="https://kit.fontawesome.com/66ce4a498c.js" crossorigin="anonymous"></script> -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
