--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" translate="no">
+	<title>A little sneak peek into my world.</title>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/bitmoji.png" />
